landing-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: dev-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  tls:
#  - hosts:
#    - dev.rafli24.my.id
#    secretName: tls-secret
#  rules:
#  - host: dev.rafli24.my.id
#    http:
#      paths:
#        - path: /
#          backend:
#            serviceName: rafli-landing
#            servicePort: 80
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - dev.rafli24.my.id
      secretName: tls-secret
  rules:
    - host: dev.rafli24.my.id
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: rafli-landing
                port:
                  number: 80
